# hot_dog_htmx

./: Cargo.toml  README.md
src/: main.rs
templates/: doggo_image.html  main.html
